@@ -1,11 +1,10 @@
 package net.minecraft.client.renderer.block.model.multipart;
 
 import com.google.common.collect.Streams;
-import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+import net.minecraft.Util;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.StateDefinition;
@@ -21,9 +20,6 @@ public class AndCondition implements Condition {
 
 	@Override
 	public Predicate<BlockState> getPredicate(StateDefinition<Block, BlockState> stateDefinition) {
-		List<Predicate<BlockState>> list = (List<Predicate<BlockState>>)Streams.stream(this.conditions)
-			.map(condition -> condition.getPredicate(stateDefinition))
-			.collect(Collectors.toList());
-		return blockState -> list.stream().allMatch(predicate -> predicate.test(blockState));
+		return Util.allOf(Streams.stream(this.conditions).map(condition -> condition.getPredicate(stateDefinition)).toList());
 	}
 }
