@@ -17,14 +17,16 @@ import net.minecraft.client.gui.Font;
 import net.minecraft.client.model.geom.EntityModelSet;
 import net.minecraft.client.player.AbstractClientPlayer;
 import net.minecraft.client.renderer.ItemInHandRenderer;
-import net.minecraft.client.renderer.LevelRenderer;
 import net.minecraft.client.renderer.LightTexture;
+import net.minecraft.client.renderer.MapRenderer;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.RenderType;
+import net.minecraft.client.renderer.ShapeRenderer;
 import net.minecraft.client.renderer.Sheets;
 import net.minecraft.client.renderer.block.BlockRenderDispatcher;
 import net.minecraft.client.renderer.culling.Frustum;
 import net.minecraft.client.renderer.debug.DebugRenderer;
+import net.minecraft.client.renderer.entity.state.EntityRenderState;
 import net.minecraft.client.renderer.texture.OverlayTexture;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.renderer.texture.TextureManager;
@@ -36,7 +38,7 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.packs.resources.ResourceManager;
 import net.minecraft.server.packs.resources.ResourceManagerReloadListener;
-import net.minecraft.util.FastColor;
+import net.minecraft.util.ARGB;
 import net.minecraft.util.Mth;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
@@ -60,14 +62,15 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 	private static final RenderType SHADOW_RENDER_TYPE = RenderType.entityShadow(ResourceLocation.withDefaultNamespace("textures/misc/shadow.png"));
 	private static final float MAX_SHADOW_RADIUS = 32.0F;
 	private static final float SHADOW_POWER_FALLOFF_Y = 0.5F;
-	private Map<EntityType<?>, EntityRenderer<?>> renderers = ImmutableMap.of();
-	private Map<PlayerSkin.Model, EntityRenderer<? extends Player>> playerRenderers = Map.of();
+	private Map<EntityType<?>, EntityRenderer<?, ?>> renderers = ImmutableMap.of();
+	private Map<PlayerSkin.Model, EntityRenderer<? extends Player, ?>> playerRenderers = Map.of();
 	public final TextureManager textureManager;
 	private Level level;
 	public Camera camera;
 	private Quaternionf cameraOrientation;
 	public Entity crosshairPickEntity;
 	private final ItemRenderer itemRenderer;
+	private final MapRenderer mapRenderer;
 	private final BlockRenderDispatcher blockRenderDispatcher;
 	private final ItemInHandRenderer itemInHandRenderer;
 	private final Font font;
@@ -84,6 +87,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 		Minecraft minecraft,
 		TextureManager textureManager,
 		ItemRenderer itemRenderer,
+		MapRenderer mapRenderer,
 		BlockRenderDispatcher blockRenderDispatcher,
 		Font font,
 		Options options,
@@ -91,6 +95,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 	) {
 		this.textureManager = textureManager;
 		this.itemRenderer = itemRenderer;
+		this.mapRenderer = mapRenderer;
 		this.itemInHandRenderer = new ItemInHandRenderer(minecraft, this, itemRenderer);
 		this.blockRenderDispatcher = blockRenderDispatcher;
 		this.font = font;
@@ -98,13 +103,13 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 		this.entityModels = entityModelSet;
 	}
 
-	public <T extends Entity> EntityRenderer<? super T> getRenderer(T entity) {
+	public <T extends Entity> EntityRenderer<? super T, ?> getRenderer(T entity) {
 		if (entity instanceof AbstractClientPlayer abstractClientPlayer) {
 			PlayerSkin.Model model = abstractClientPlayer.getSkin().model();
-			EntityRenderer<? extends Player> entityRenderer = (EntityRenderer<? extends Player>)this.playerRenderers.get(model);
-			return (EntityRenderer<? super T>)(entityRenderer != null ? entityRenderer : (EntityRenderer)this.playerRenderers.get(PlayerSkin.Model.WIDE));
+			EntityRenderer<? extends Player, ?> entityRenderer = (EntityRenderer<? extends Player, ?>)this.playerRenderers.get(model);
+			return (EntityRenderer<? super T, ?>)(entityRenderer != null ? entityRenderer : (EntityRenderer)this.playerRenderers.get(PlayerSkin.Model.WIDE));
 		} else {
-			return (EntityRenderer<? super T>)this.renderers.get(entity.getType());
+			return (EntityRenderer<? super T, ?>)this.renderers.get(entity.getType());
 		}
 	}
 
@@ -132,41 +137,52 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 	}
 
 	public <E extends Entity> boolean shouldRender(E entity, Frustum frustum, double d, double e, double f) {
-		EntityRenderer<? super E> entityRenderer = this.getRenderer(entity);
+		EntityRenderer<? super E, ?> entityRenderer = this.getRenderer(entity);
 		return entityRenderer.shouldRender(entity, frustum, d, e, f);
 	}
 
-	public <E extends Entity> void render(
-		E entity, double d, double e, double f, float g, float h, PoseStack poseStack, MultiBufferSource multiBufferSource, int i
-	) {
-		EntityRenderer<? super E> entityRenderer = this.getRenderer(entity);
+	public <E extends Entity> void render(E entity, double d, double e, double f, float g, PoseStack poseStack, MultiBufferSource multiBufferSource, int i) {
+		EntityRenderer<? super E, ?> entityRenderer = this.getRenderer(entity);
+		this.render(entity, d, e, f, g, poseStack, multiBufferSource, i, entityRenderer);
+	}
 
+	private <E extends Entity, S extends EntityRenderState> void render(
+		E entity, double d, double e, double f, float g, PoseStack poseStack, MultiBufferSource multiBufferSource, int i, EntityRenderer<? super E, S> entityRenderer
+	) {
 		try {
-			Vec3 vec3 = entityRenderer.getRenderOffset(entity, h);
-			double j = d + vec3.x();
-			double k = e + vec3.y();
-			double l = f + vec3.z();
+			S entityRenderState = entityRenderer.createRenderState(entity, g);
+			Vec3 vec3 = entityRenderer.getRenderOffset(entityRenderState);
+			double h = d + vec3.x();
+			double j = e + vec3.y();
+			double k = f + vec3.z();
 			poseStack.pushPose();
-			poseStack.translate(j, k, l);
-			entityRenderer.render(entity, g, h, poseStack, multiBufferSource, i);
-			if (entity.displayFireAnimation()) {
-				this.renderFlame(poseStack, multiBufferSource, entity, Mth.rotationAroundAxis(Mth.Y_AXIS, this.cameraOrientation, new Quaternionf()));
+			poseStack.translate(h, j, k);
+			entityRenderer.render(entityRenderState, poseStack, multiBufferSource, i);
+			if (entityRenderState.displayFireAnimation) {
+				this.renderFlame(poseStack, multiBufferSource, entityRenderState, Mth.rotationAroundAxis(Mth.Y_AXIS, this.cameraOrientation, new Quaternionf()));
 			}
 
-			poseStack.translate(-vec3.x(), -vec3.y(), -vec3.z());
-			if (this.options.entityShadows().get() && this.shouldRenderShadow && !entity.isInvisible()) {
-				float m = entityRenderer.getShadowRadius(entity);
-				if (m > 0.0F) {
-					double n = this.distanceToSqr(entity.getX(), entity.getY(), entity.getZ());
-					float o = (float)((1.0 - n / 256.0) * (double)entityRenderer.shadowStrength);
-					if (o > 0.0F) {
-						renderShadow(poseStack, multiBufferSource, entity, o, h, this.level, Math.min(m, 32.0F));
+			if (entity instanceof Player) {
+				poseStack.translate(-vec3.x(), -vec3.y(), -vec3.z());
+			}
+
+			if (this.options.entityShadows().get() && this.shouldRenderShadow && !entityRenderState.isInvisible) {
+				float l = entityRenderer.getShadowRadius(entityRenderState);
+				if (l > 0.0F) {
+					double m = entityRenderState.distanceToCameraSq;
+					float n = (float)((1.0 - m / 256.0) * (double)entityRenderer.shadowStrength);
+					if (n > 0.0F) {
+						renderShadow(poseStack, multiBufferSource, entityRenderState, n, g, this.level, Math.min(l, 32.0F));
 					}
 				}
 			}
 
-			if (this.renderHitBoxes && !entity.isInvisible() && !Minecraft.getInstance().showOnlyReducedInfo()) {
-				renderHitbox(poseStack, multiBufferSource.getBuffer(RenderType.lines()), entity, h, 1.0F, 1.0F, 1.0F);
+			if (!(entity instanceof Player)) {
+				poseStack.translate(-vec3.x(), -vec3.y(), -vec3.z());
+			}
+
+			if (this.renderHitBoxes && !entityRenderState.isInvisible && !Minecraft.getInstance().showOnlyReducedInfo()) {
+				renderHitbox(poseStack, multiBufferSource.getBuffer(RenderType.lines()), entity, g, 1.0F, 1.0F, 1.0F);
 			}
 
 			poseStack.popPose();
@@ -177,8 +193,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 			CrashReportCategory crashReportCategory2 = crashReport.addCategory("Renderer details");
 			crashReportCategory2.setDetail("Assigned renderer", entityRenderer);
 			crashReportCategory2.setDetail("Location", CrashReportCategory.formatLocation(this.level, d, e, f));
-			crashReportCategory2.setDetail("Rotation", g);
-			crashReportCategory2.setDetail("Delta", h);
+			crashReportCategory2.setDetail("Delta", g);
 			throw new ReportedException(crashReport);
 		}
 	}
@@ -191,7 +206,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 			poseStack.pushPose();
 			poseStack.translate(entity2.getX() - entity.getX(), entity2.getY() - entity.getY(), entity2.getZ() - entity.getZ());
 			renderHitbox(poseStack, multiBufferSource.getBuffer(RenderType.lines()), entity2, 1.0F, 0.0F, 1.0F, 0.0F);
-			renderVector(poseStack, multiBufferSource.getBuffer(RenderType.lines()), new Vector3f(), entity2.getDeltaMovement(), -256);
+			ShapeRenderer.renderVector(poseStack, multiBufferSource.getBuffer(RenderType.lines()), new Vector3f(), entity2.getDeltaMovement(), -256);
 			poseStack.popPose();
 		}
 	}
@@ -211,7 +226,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 
 	private static void renderHitbox(PoseStack poseStack, VertexConsumer vertexConsumer, Entity entity, float f, float g, float h, float i) {
 		AABB aABB = entity.getBoundingBox().move(-entity.getX(), -entity.getY(), -entity.getZ());
-		LevelRenderer.renderLineBox(poseStack, vertexConsumer, aABB, g, h, i, 1.0F);
+		ShapeRenderer.renderLineBox(poseStack, vertexConsumer, aABB, g, h, i, 1.0F);
 		if (entity instanceof EnderDragon) {
 			double d = -Mth.lerp((double)f, entity.xOld, entity.getX());
 			double e = -Mth.lerp((double)f, entity.yOld, entity.getY());
@@ -223,7 +238,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 				double l = e + Mth.lerp((double)f, enderDragonPart.yOld, enderDragonPart.getY());
 				double m = j + Mth.lerp((double)f, enderDragonPart.zOld, enderDragonPart.getZ());
 				poseStack.translate(k, l, m);
-				LevelRenderer.renderLineBox(
+				ShapeRenderer.renderLineBox(
 					poseStack,
 					vertexConsumer,
 					enderDragonPart.getBoundingBox().move(-enderDragonPart.getX(), -enderDragonPart.getY(), -enderDragonPart.getZ()),
@@ -238,7 +253,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 
 		if (entity instanceof LivingEntity) {
 			float n = 0.01F;
-			LevelRenderer.renderLineBox(
+			ShapeRenderer.renderLineBox(
 				poseStack,
 				vertexConsumer,
 				aABB.minX,
@@ -259,31 +274,23 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 			float o = Math.min(entity2.getBbWidth(), entity.getBbWidth()) / 2.0F;
 			float p = 0.0625F;
 			Vec3 vec3 = entity2.getPassengerRidingPosition(entity).subtract(entity.position());
-			LevelRenderer.renderLineBox(
+			ShapeRenderer.renderLineBox(
 				poseStack, vertexConsumer, vec3.x - (double)o, vec3.y, vec3.z - (double)o, vec3.x + (double)o, vec3.y + 0.0625, vec3.z + (double)o, 1.0F, 1.0F, 0.0F, 1.0F
 			);
 		}
 
-		renderVector(poseStack, vertexConsumer, new Vector3f(0.0F, entity.getEyeHeight(), 0.0F), entity.getViewVector(f).scale(2.0), -16776961);
+		ShapeRenderer.renderVector(poseStack, vertexConsumer, new Vector3f(0.0F, entity.getEyeHeight(), 0.0F), entity.getViewVector(f).scale(2.0), -16776961);
 	}
 
-	private static void renderVector(PoseStack poseStack, VertexConsumer vertexConsumer, Vector3f vector3f, Vec3 vec3, int i) {
-		PoseStack.Pose pose = poseStack.last();
-		vertexConsumer.addVertex(pose, vector3f).setColor(i).setNormal(pose, (float)vec3.x, (float)vec3.y, (float)vec3.z);
-		vertexConsumer.addVertex(pose, (float)((double)vector3f.x() + vec3.x), (float)((double)vector3f.y() + vec3.y), (float)((double)vector3f.z() + vec3.z))
-			.setColor(i)
-			.setNormal(pose, (float)vec3.x, (float)vec3.y, (float)vec3.z);
-	}
-
-	private void renderFlame(PoseStack poseStack, MultiBufferSource multiBufferSource, Entity entity, Quaternionf quaternionf) {
+	private void renderFlame(PoseStack poseStack, MultiBufferSource multiBufferSource, EntityRenderState entityRenderState, Quaternionf quaternionf) {
 		TextureAtlasSprite textureAtlasSprite = ModelBakery.FIRE_0.sprite();
 		TextureAtlasSprite textureAtlasSprite2 = ModelBakery.FIRE_1.sprite();
 		poseStack.pushPose();
-		float f = entity.getBbWidth() * 1.4F;
+		float f = entityRenderState.boundingBoxWidth * 1.4F;
 		poseStack.scale(f, f, f);
 		float g = 0.5F;
 		float h = 0.0F;
-		float i = entity.getBbHeight() / f;
+		float i = entityRenderState.boundingBoxHeight / f;
 		float j = 0.0F;
 		poseStack.mulPose(quaternionf);
 		poseStack.translate(0.0F, 0.0F, 0.3F - (float)((int)i) * 0.02F);
@@ -320,30 +327,29 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 		vertexConsumer.addVertex(pose, f, g, h).setColor(-1).setUv(i, j).setUv1(0, 10).setLight(240).setNormal(pose, 0.0F, 1.0F, 0.0F);
 	}
 
-	private static void renderShadow(PoseStack poseStack, MultiBufferSource multiBufferSource, Entity entity, float f, float g, LevelReader levelReader, float h) {
-		double d = Mth.lerp((double)g, entity.xOld, entity.getX());
-		double e = Mth.lerp((double)g, entity.yOld, entity.getY());
-		double i = Mth.lerp((double)g, entity.zOld, entity.getZ());
-		float j = Math.min(f / 0.5F, h);
-		int k = Mth.floor(d - (double)h);
-		int l = Mth.floor(d + (double)h);
-		int m = Mth.floor(e - (double)j);
-		int n = Mth.floor(e);
-		int o = Mth.floor(i - (double)h);
-		int p = Mth.floor(i + (double)h);
+	private static void renderShadow(
+		PoseStack poseStack, MultiBufferSource multiBufferSource, EntityRenderState entityRenderState, float f, float g, LevelReader levelReader, float h
+	) {
+		float i = Math.min(f / 0.5F, h);
+		int j = Mth.floor(entityRenderState.x - (double)h);
+		int k = Mth.floor(entityRenderState.x + (double)h);
+		int l = Mth.floor(entityRenderState.y - (double)i);
+		int m = Mth.floor(entityRenderState.y);
+		int n = Mth.floor(entityRenderState.z - (double)h);
+		int o = Mth.floor(entityRenderState.z + (double)h);
 		PoseStack.Pose pose = poseStack.last();
 		VertexConsumer vertexConsumer = multiBufferSource.getBuffer(SHADOW_RENDER_TYPE);
 		BlockPos.MutableBlockPos mutableBlockPos = new BlockPos.MutableBlockPos();
 
-		for (int q = o; q <= p; q++) {
-			for (int r = k; r <= l; r++) {
-				mutableBlockPos.set(r, 0, q);
+		for (int p = n; p <= o; p++) {
+			for (int q = j; q <= k; q++) {
+				mutableBlockPos.set(q, 0, p);
 				ChunkAccess chunkAccess = levelReader.getChunk(mutableBlockPos);
 
-				for (int s = m; s <= n; s++) {
-					mutableBlockPos.setY(s);
-					float t = f - (float)(e - (double)mutableBlockPos.getY()) * 0.5F;
-					renderBlockShadow(pose, vertexConsumer, chunkAccess, levelReader, mutableBlockPos, d, e, i, h, t);
+				for (int r = l; r <= m; r++) {
+					mutableBlockPos.setY(r);
+					float s = f - (float)(entityRenderState.y - (double)mutableBlockPos.getY()) * 0.5F;
+					renderBlockShadow(pose, vertexConsumer, chunkAccess, levelReader, mutableBlockPos, entityRenderState.x, entityRenderState.y, entityRenderState.z, h, s);
 				}
 			}
 		}
@@ -374,7 +380,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 							j = 1.0F;
 						}
 
-						int k = FastColor.ARGB32.color(Mth.floor(j * 255.0F), 255, 255, 255);
+						int k = ARGB.color(Mth.floor(j * 255.0F), 255, 255, 255);
 						AABB aABB = voxelShape.bounds();
 						double l = (double)blockPos.getX() + aABB.minX;
 						double m = (double)blockPos.getX() + aABB.maxX;
@@ -431,7 +437,7 @@ public class EntityRenderDispatcher implements ResourceManagerReloadListener {
 	@Override
 	public void onResourceManagerReload(ResourceManager resourceManager) {
 		EntityRendererProvider.Context context = new EntityRendererProvider.Context(
-			this, this.itemRenderer, this.blockRenderDispatcher, this.itemInHandRenderer, resourceManager, this.entityModels, this.font
+			this, this.itemRenderer, this.mapRenderer, this.blockRenderDispatcher, resourceManager, this.entityModels, this.font
 		);
 		this.renderers = EntityRenderers.createEntityRenderers(context);
 		this.playerRenderers = EntityRenderers.createPlayerRenderers(context);
