@@ -45,29 +45,13 @@ public class ServerWatchdog implements Runnable {
 					String.format(Locale.ROOT, "%.2f", this.server.tickRateManager().millisecondsPerTick() / (float)TimeUtil.MILLISECONDS_PER_SECOND)
 				);
 				LOGGER.error(LogUtils.FATAL_MARKER, "Considering it to be crashed, server will forcibly shutdown.");
-				ThreadMXBean threadMXBean = ManagementFactory.getThreadMXBean();
-				ThreadInfo[] threadInfos = threadMXBean.dumpAllThreads(true, true);
-				StringBuilder stringBuilder = new StringBuilder();
-				Error error = new Error("Watchdog");
-
-				for (ThreadInfo threadInfo : threadInfos) {
-					if (threadInfo.getThreadId() == this.server.getRunningThread().getId()) {
-						error.setStackTrace(threadInfo.getStackTrace());
-					}
-
-					stringBuilder.append(threadInfo);
-					stringBuilder.append("\n");
-				}
-
-				CrashReport crashReport = new CrashReport("Watching Server", error);
+				CrashReport crashReport = createWatchdogCrashReport("Watching Server", this.server.getRunningThread().threadId());
 				this.server.fillSystemReport(crashReport.getSystemReport());
-				CrashReportCategory crashReportCategory = crashReport.addCategory("Thread Dump");
-				crashReportCategory.setDetail("Threads", stringBuilder);
-				CrashReportCategory crashReportCategory2 = crashReport.addCategory("Performance stats");
-				crashReportCategory2.setDetail(
+				CrashReportCategory crashReportCategory = crashReport.addCategory("Performance stats");
+				crashReportCategory.setDetail(
 					"Random tick rate", (CrashReportDetail<String>)(() -> this.server.getWorldData().getGameRules().getRule(GameRules.RULE_RANDOMTICKING).toString())
 				);
-				crashReportCategory2.setDetail(
+				crashReportCategory.setDetail(
 					"Level stats",
 					(CrashReportDetail<String>)(() -> (String)Streams.stream(this.server.getAllLevels())
 							.map(serverLevel -> serverLevel.dimension() + ": " + serverLevel.getWatchdogStats())
@@ -86,9 +70,30 @@ public class ServerWatchdog implements Runnable {
 
 			try {
 				Thread.sleep((l + this.maxTickTimeNanos - m) / TimeUtil.NANOSECONDS_PER_MILLISECOND);
-			} catch (InterruptedException var15) {
+			} catch (InterruptedException var10) {
 			}
 		}
+	}
+
+	public static CrashReport createWatchdogCrashReport(String string, long l) {
+		ThreadMXBean threadMXBean = ManagementFactory.getThreadMXBean();
+		ThreadInfo[] threadInfos = threadMXBean.dumpAllThreads(true, true);
+		StringBuilder stringBuilder = new StringBuilder();
+		Error error = new Error("Watchdog");
+
+		for (ThreadInfo threadInfo : threadInfos) {
+			if (threadInfo.getThreadId() == l) {
+				error.setStackTrace(threadInfo.getStackTrace());
+			}
+
+			stringBuilder.append(threadInfo);
+			stringBuilder.append("\n");
+		}
+
+		CrashReport crashReport = new CrashReport(string, error);
+		CrashReportCategory crashReportCategory = crashReport.addCategory("Thread Dump");
+		crashReportCategory.setDetail("Threads", stringBuilder);
+		return crashReport;
 	}
 
 	private void exit() {
