@@ -2,18 +2,13 @@ package net.minecraft.world.level.biome;
 
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.mojang.logging.LogUtils;
-import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
-import java.util.Map.Entry;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import net.minecraft.Util;
@@ -21,7 +16,6 @@ import net.minecraft.core.Holder;
 import net.minecraft.core.HolderGetter;
 import net.minecraft.core.HolderSet;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.util.StringRepresentable;
 import net.minecraft.world.level.levelgen.GenerationStep;
 import net.minecraft.world.level.levelgen.carver.ConfiguredWorldCarver;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
@@ -31,14 +25,11 @@ import org.slf4j.Logger;
 
 public class BiomeGenerationSettings {
 	private static final Logger LOGGER = LogUtils.getLogger();
-	public static final BiomeGenerationSettings EMPTY = new BiomeGenerationSettings(ImmutableMap.of(), ImmutableList.of());
+	public static final BiomeGenerationSettings EMPTY = new BiomeGenerationSettings(HolderSet.direct(), List.of());
 	public static final MapCodec<BiomeGenerationSettings> CODEC = RecordCodecBuilder.mapCodec(
 		instance -> instance.group(
-					Codec.simpleMap(
-							GenerationStep.Carving.CODEC,
-							ConfiguredWorldCarver.LIST_CODEC.promotePartial(Util.prefix("Carver: ", LOGGER::error)),
-							StringRepresentable.keys(GenerationStep.Carving.values())
-						)
+					ConfiguredWorldCarver.LIST_CODEC
+						.promotePartial(Util.prefix("Carver: ", LOGGER::error))
 						.fieldOf("carvers")
 						.forGetter(biomeGenerationSettings -> biomeGenerationSettings.carvers),
 					PlacedFeature.LIST_OF_LISTS_CODEC
@@ -48,13 +39,13 @@ public class BiomeGenerationSettings {
 				)
 				.apply(instance, BiomeGenerationSettings::new)
 	);
-	private final Map<GenerationStep.Carving, HolderSet<ConfiguredWorldCarver<?>>> carvers;
+	private final HolderSet<ConfiguredWorldCarver<?>> carvers;
 	private final List<HolderSet<PlacedFeature>> features;
 	private final Supplier<List<ConfiguredFeature<?, ?>>> flowerFeatures;
 	private final Supplier<Set<PlacedFeature>> featureSet;
 
-	BiomeGenerationSettings(Map<GenerationStep.Carving, HolderSet<ConfiguredWorldCarver<?>>> map, List<HolderSet<PlacedFeature>> list) {
-		this.carvers = map;
+	BiomeGenerationSettings(HolderSet<ConfiguredWorldCarver<?>> holderSet, List<HolderSet<PlacedFeature>> list) {
+		this.carvers = holderSet;
 		this.features = list;
 		this.flowerFeatures = Suppliers.memoize(
 			() -> (List<ConfiguredFeature<?, ?>>)list.stream()
@@ -67,8 +58,8 @@ public class BiomeGenerationSettings {
 		this.featureSet = Suppliers.memoize(() -> (Set<PlacedFeature>)list.stream().flatMap(HolderSet::stream).map(Holder::value).collect(Collectors.toSet()));
 	}
 
-	public Iterable<Holder<ConfiguredWorldCarver<?>>> getCarvers(GenerationStep.Carving carving) {
-		return (Iterable<Holder<ConfiguredWorldCarver<?>>>)Objects.requireNonNullElseGet((Iterable)this.carvers.get(carving), List::of);
+	public Iterable<Holder<ConfiguredWorldCarver<?>>> getCarvers() {
+		return this.carvers;
 	}
 
 	public List<ConfiguredFeature<?, ?>> getFlowerFeatures() {
@@ -97,15 +88,15 @@ public class BiomeGenerationSettings {
 			return this;
 		}
 
-		public BiomeGenerationSettings.Builder addCarver(GenerationStep.Carving carving, ResourceKey<ConfiguredWorldCarver<?>> resourceKey) {
-			this.addCarver(carving, this.worldCarvers.getOrThrow(resourceKey));
+		public BiomeGenerationSettings.Builder addCarver(ResourceKey<ConfiguredWorldCarver<?>> resourceKey) {
+			this.addCarver(this.worldCarvers.getOrThrow(resourceKey));
 			return this;
 		}
 	}
 
 	public static class PlainBuilder {
-		private final Map<GenerationStep.Carving, List<Holder<ConfiguredWorldCarver<?>>>> carvers = Maps.<GenerationStep.Carving, List<Holder<ConfiguredWorldCarver<?>>>>newLinkedHashMap();
-		private final List<List<Holder<PlacedFeature>>> features = Lists.<List<Holder<PlacedFeature>>>newArrayList();
+		private final List<Holder<ConfiguredWorldCarver<?>>> carvers = new ArrayList();
+		private final List<List<Holder<PlacedFeature>>> features = new ArrayList();
 
 		public BiomeGenerationSettings.PlainBuilder addFeature(GenerationStep.Decoration decoration, Holder<PlacedFeature> holder) {
 			return this.addFeature(decoration.ordinal(), holder);
@@ -117,8 +108,8 @@ public class BiomeGenerationSettings {
 			return this;
 		}
 
-		public BiomeGenerationSettings.PlainBuilder addCarver(GenerationStep.Carving carving, Holder<ConfiguredWorldCarver<?>> holder) {
-			((List)this.carvers.computeIfAbsent(carving, carvingx -> Lists.newArrayList())).add(holder);
+		public BiomeGenerationSettings.PlainBuilder addCarver(Holder<ConfiguredWorldCarver<?>> holder) {
+			this.carvers.add(holder);
 			return this;
 		}
 
@@ -130,11 +121,7 @@ public class BiomeGenerationSettings {
 
 		public BiomeGenerationSettings build() {
 			return new BiomeGenerationSettings(
-				(Map<GenerationStep.Carving, HolderSet<ConfiguredWorldCarver<?>>>)this.carvers
-					.entrySet()
-					.stream()
-					.collect(ImmutableMap.toImmutableMap(Entry::getKey, entry -> HolderSet.direct((List)entry.getValue()))),
-				(List<HolderSet<PlacedFeature>>)this.features.stream().map(HolderSet::direct).collect(ImmutableList.toImmutableList())
+				HolderSet.direct(this.carvers), (List<HolderSet<PlacedFeature>>)this.features.stream().map(HolderSet::direct).collect(ImmutableList.toImmutableList())
 			);
 		}
 	}
